src/ffi/libwtk.h

typedef void* wtk_app_t;
wtk_app_t wtk_app_sdl_new(char* title);
void wtk_app_sdl_destroy(wtk_app_t app);
void wtk_app_run(wtk_app_t app);
typedef void* wtk_widget_t;
typedef void* wtk_button_t;
typedef void (*wtk_button_callback_t)(wtk_button_t button);
wtk_button_t wtk_button_new(char* text, wtk_button_callback_t cb);
wtk_widget_t wtk_button_share(wtk_button_t button);
void wtk_button_set_text(wtk_button_t button, char* text);
void wtk_app_sdl_add_widget(wtk_app_t app, wtk_widget_t widget);